Add baseline, submission score

--- a/SR.ipynb
+++ b/SR.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "4    NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,13 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72927b7babec4369898cd08f54c66759",
+       "model_id": "f78d2130ab8442019a8555696de77754",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,12 +240,254 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Check duplicats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>session_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>step</th>\n",
+       "      <th>action_type</th>\n",
+       "      <th>reference</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>city</th>\n",
+       "      <th>device</th>\n",
+       "      <th>current_filters</th>\n",
+       "      <th>impressions</th>\n",
+       "      <th>prices</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1686470</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541263488</td>\n",
+       "      <td>1</td>\n",
+       "      <td>clickout item</td>\n",
+       "      <td>1008733</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1008733|655716|4342348|502066|1352530|507861|4...</td>\n",
+       "      <td>136|115|93|135|92|71|112|108|101|92|127|122|15...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2177386</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541345795</td>\n",
+       "      <td>2</td>\n",
+       "      <td>interaction item image</td>\n",
+       "      <td>6452918</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2177387</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541345795</td>\n",
+       "      <td>3</td>\n",
+       "      <td>interaction item image</td>\n",
+       "      <td>6452918</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2177388</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541345797</td>\n",
+       "      <td>4</td>\n",
+       "      <td>clickout item</td>\n",
+       "      <td>6452918</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>655716|507861|3133206|2258514|1673835|3583050|...</td>\n",
+       "      <td>283|156|133|208|196|246|208|222|199|59|160|128...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2177389</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541345934</td>\n",
+       "      <td>5</td>\n",
+       "      <td>clickout item</td>\n",
+       "      <td>655716</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>655716|507861|3133206|6147882|1673835|2258514|...</td>\n",
+       "      <td>127|65|57|49|85|70|58|179|101|120|56|99|89|23|...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2177390</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541360791</td>\n",
+       "      <td>6</td>\n",
+       "      <td>clickout item</td>\n",
+       "      <td>655716</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>502066|655716|4342348|1352530|3403842|2143854|...</td>\n",
+       "      <td>62|69|83|78|61|90|76|65|69|52|113|56|82|101|40...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2177391</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541361109</td>\n",
+       "      <td>7</td>\n",
+       "      <td>clickout item</td>\n",
+       "      <td>3403842</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>502066|655716|4342348|1352530|3403842|2143854|...</td>\n",
+       "      <td>62|69|83|78|61|90|76|65|69|52|113|56|82|101|40...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2177392</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541361389</td>\n",
+       "      <td>8</td>\n",
+       "      <td>clickout item</td>\n",
+       "      <td>6147882</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>502066|655716|4342348|1352530|3403842|2143854|...</td>\n",
+       "      <td>62|69|83|78|61|90|76|65|69|52|113|56|82|101|40...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2177393</td>\n",
+       "      <td>C015B3HYIZSF</td>\n",
+       "      <td>15e8515f6d309</td>\n",
+       "      <td>1541361591</td>\n",
+       "      <td>9</td>\n",
+       "      <td>clickout item</td>\n",
+       "      <td>1405084</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Gramado, Brazil</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>502066|655716|4342348|1352530|3403842|2143854|...</td>\n",
+       "      <td>62|69|83|78|61|90|76|65|69|52|113|56|82|101|40...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              user_id     session_id   timestamp  step  \\\n",
+       "1686470  C015B3HYIZSF  15e8515f6d309  1541263488     1   \n",
+       "2177386  C015B3HYIZSF  15e8515f6d309  1541345795     2   \n",
+       "2177387  C015B3HYIZSF  15e8515f6d309  1541345795     3   \n",
+       "2177388  C015B3HYIZSF  15e8515f6d309  1541345797     4   \n",
+       "2177389  C015B3HYIZSF  15e8515f6d309  1541345934     5   \n",
+       "2177390  C015B3HYIZSF  15e8515f6d309  1541360791     6   \n",
+       "2177391  C015B3HYIZSF  15e8515f6d309  1541361109     7   \n",
+       "2177392  C015B3HYIZSF  15e8515f6d309  1541361389     8   \n",
+       "2177393  C015B3HYIZSF  15e8515f6d309  1541361591     9   \n",
+       "\n",
+       "                    action_type reference platform             city  device  \\\n",
+       "1686470           clickout item   1008733       BR  Gramado, Brazil  mobile   \n",
+       "2177386  interaction item image   6452918       BR  Gramado, Brazil  mobile   \n",
+       "2177387  interaction item image   6452918       BR  Gramado, Brazil  mobile   \n",
+       "2177388           clickout item   6452918       BR  Gramado, Brazil  mobile   \n",
+       "2177389           clickout item    655716       BR  Gramado, Brazil  mobile   \n",
+       "2177390           clickout item    655716       BR  Gramado, Brazil  mobile   \n",
+       "2177391           clickout item   3403842       BR  Gramado, Brazil  mobile   \n",
+       "2177392           clickout item   6147882       BR  Gramado, Brazil  mobile   \n",
+       "2177393           clickout item   1405084       BR  Gramado, Brazil  mobile   \n",
+       "\n",
+       "        current_filters                                        impressions  \\\n",
+       "1686470             NaN  1008733|655716|4342348|502066|1352530|507861|4...   \n",
+       "2177386             NaN                                                NaN   \n",
+       "2177387             NaN                                                NaN   \n",
+       "2177388             NaN  655716|507861|3133206|2258514|1673835|3583050|...   \n",
+       "2177389             NaN  655716|507861|3133206|6147882|1673835|2258514|...   \n",
+       "2177390             NaN  502066|655716|4342348|1352530|3403842|2143854|...   \n",
+       "2177391             NaN  502066|655716|4342348|1352530|3403842|2143854|...   \n",
+       "2177392             NaN  502066|655716|4342348|1352530|3403842|2143854|...   \n",
+       "2177393             NaN  502066|655716|4342348|1352530|3403842|2143854|...   \n",
+       "\n",
+       "                                                    prices  \n",
+       "1686470  136|115|93|135|92|71|112|108|101|92|127|122|15...  \n",
+       "2177386                                                NaN  \n",
+       "2177387                                                NaN  \n",
+       "2177388  283|156|133|208|196|246|208|222|199|59|160|128...  \n",
+       "2177389  127|65|57|49|85|70|58|179|101|120|56|99|89|23|...  \n",
+       "2177390  62|69|83|78|61|90|76|65|69|52|113|56|82|101|40...  \n",
+       "2177391  62|69|83|78|61|90|76|65|69|52|113|56|82|101|40...  \n",
+       "2177392  62|69|83|78|61|90|76|65|69|52|113|56|82|101|40...  \n",
+       "2177393  62|69|83|78|61|90|76|65|69|52|113|56|82|101|40...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_without_duplicats[df.session_id == '15e8515f6d309']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Get number of sessions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +496,7 @@
        "910683"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +525,7 @@
        "728546"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +547,7 @@
        "'cae8906db6f21'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +1201,7 @@
        "12756502  64|65|74|80|82|84|85|85|85|86|87|87|88|91|91|9...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +1228,7 @@
        "12756502"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1409,7 @@
        "12756502  64|65|74|80|82|84|85|85|85|86|87|87|88|91|91|9...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1583,7 @@
        "15932991  58|96|55|75|90|60|233|104|150|145|328|207|150|...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1674,7 @@
        "15932991  58|96|55|75|90|60|233|104|150|145|328|207|150|...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1489,9 +1731,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "84206310bc8c4e78ac7b4db549d747e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=171981), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -2498,7 +2761,7 @@
        " ...]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2506,7 +2769,7 @@
    "source": [
     "session_ids_to_change = []\n",
     "user_ids = grouped_session.user_id.unique()\n",
-    "for user_id in user_ids:\n",
+    "for user_id in tqdm(user_ids):\n",
     "    last_session_id = str(grouped_session[grouped_session.user_id == user_id]\n",
     "                          .sort_values('max_timestamp').head(1).index[0])\n",
     "    session_ids_to_change.append(last_session_id)\n",
@@ -2523,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2552,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2747,7 +3010,7 @@
        "13274128                                                NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2765,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
